--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <div id="sidebar" class="sidebar">
         <button class="close-btn" onclick="closeSidebar()">×</button>
         <div class="sidebar-content">
-            <img src="images/avatar2.png" alt="头像" class="avatar">
+            <img src="images/avatar.png" alt="头像" class="avatar">
             <h3>我的个人信息</h3>
             <ul>
                 <li><a href="#">友链1</a></li>
