--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>我的个人博客</title>
     
     <!-- 引用外部CSS文件 -->
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="css/style.css">
 
     <!-- 引用外部JS文件 -->
     <script src="script.js" defer></script>
